--- a/React/package.json
+++ b/React/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "base64-to-image": "^1.0.2",
+    "bootstrap": "^4.3.1",
+    "jquery": "^1.9.1",
+    "mdbreact": "^4.15.0",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "reactstrap": "^8.0.0"
   },
   "devDependencies": {},
   "scripts": {
